--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "secondnetwork/blade-tabler-icons": "^3.33"
     },
     "require-dev": {
